feat: add auth, services, & review features and unit test
